# SudoOS-Plus

./: .gitignore  Cargo.toml  Makefile  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: m5-ci.yml
arch/loongarch64/: Cargo.toml  linker.ld
arch/loongarch64/src/: boot.rs  cpu.rs  early_console.rs  interrupt.rs  lib.rs  smp.rs  time.rs
arch/loongarch64/src/asm/: entry.S  secondary.S
arch/loongarch64/src/memory/: dmw.rs  layout.rs  mod.rs  phys_access.rs
arch/loongarch64/src/memory/paging/: boot.rs  entry.rs  geometry.rs  hardware.rs  map.rs  mod.rs  refill.S
arch/loongarch64/src/platform/: mod.rs
arch/loongarch64/src/platform/qemu_virt/: boot.rs  console.rs  memory.rs  mod.rs
arch/loongarch64/src/task/: context.rs  mod.rs  switch.S
arch/loongarch64/src/trap/: entry.S  frame.rs  mod.rs
arch/riscv64/: Cargo.toml  linker.ld
arch/riscv64/src/: boot.rs  cpu.rs  early_console.rs  interrupt.rs  lib.rs  sbi.rs  smp.rs  time.rs
boot/: Cargo.toml
boot/src/: address.rs  info.rs  lib.rs
docs/: boot-order.md  call-function.md  context-rules.md  cpu-lifecycle.md  ipi-mailbox.md  locking.md  m5-completion.md  m6-timer-runtime.md  scheduler-state-machine.md  tlb-request-v2.md
firmware/fdt/: Cargo.toml
firmware/fdt/src/: blob.rs  error.rs  lib.rs  region.rs  tree.rs
kernel/: Cargo.toml  build.rs
kernel/src/: call_function.rs  console.rs  context.rs  fault.rs  heap.rs  ipi.rs  irq.rs  irq_lock.rs  linker.rs  lockdep.rs  main.rs  memory.rs  page_alloc.rs  panic.rs  runtime_page_table.rs  smp.rs  time.rs  timer.rs  tlb.rs  tracked_spin.rs  trap.rs  vm.rs
kernel/src/task/: idle_verify.rs  m4c2_verify.rs  m4c_verify.rs  mod.rs  stack.rs  wait_queue.rs
mm/: Cargo.toml
mm/src/: address.rs  address_space.rs  early_allocator.rs  fault.rs  frame.rs  layout.rs  lib.rs  map.rs  range.rs  tlb.rs  virtual_address.rs  virtual_page.rs  virtual_range.rs  vma.rs  vmalloc.rs
mm/src/buddy/: allocator.rs  mod.rs  page.rs  zone.rs
mm/src/heap/: allocator.rs  error.rs  large.rs  mod.rs
mm/src/paging/: geometry.rs  mapping.rs  mod.rs  table.rs
runtime/: Cargo.toml
runtime/src/: console.rs
scripts/: build.sh  check-source-tree.sh  m5-tag.sh  m5-verify.py  run-qemu.sh  smoke.py  stress-smp.py  stress-smp.sh  test-smoke-harness.py
sync/: Cargo.toml
sync/src/: lib.rs  spin_lock.rs
(+23 files in other folders)
