[package]
name = "arch-loongarch64"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
path = "src/lib.rs"

[features]
default = ["platform-qemu-virt"]

platform-qemu-virt = []

[dependencies]
myos-boot = {
    path = "../../boot",
}

myos-mm = {
    path = "../../mm",
}

[lints]
workspace = true