[package]
name = "myos-fdt"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
fdt-parser = {
    package = "fdt",
    path = "../../vendor/fdt-reader",
    default-features = false,
}

[lints]
workspace = true